added first set of partial tests for the artists dataframe

--- a/CW2.ipynb
+++ b/CW2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 719,
+   "execution_count": 9,
    "id": "b8ce7b1b",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,8 @@
     "import re\n",
     "import urllib.parse\n",
     "from lyricsgenius import Genius\n",
-    "import os\n"
+    "import os\n",
+    "import unittest\n"
    ]
   },
   {
@@ -1566,7 +1567,7 @@
   {
    "cell_type": "code",
    "execution_count": 642,
-   "id": "3ac718b4",
+   "id": "3cf1c001",
    "metadata": {},
    "outputs": [
     {
@@ -1721,7 +1722,7 @@
   {
    "cell_type": "code",
    "execution_count": 643,
-   "id": "1024552e",
+   "id": "429653da",
    "metadata": {},
    "outputs": [
     {
@@ -2713,7 +2714,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d7452ea",
+   "id": "2ee9a2e6",
    "metadata": {},
    "source": [
     "## Write dataframes"
@@ -2739,7 +2740,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27cd6740",
+   "id": "53c0707f",
    "metadata": {},
    "source": [
     "## Read dataframes"
@@ -2747,19 +2748,460 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "0f8f88f6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "artists_df = pd.read_csv('intermediate_data/artists.csv', sep=';')\n",
+    "spotify_df = pd.read_csv('intermediate_data/spotify.csv', sep=';')\n",
+    "kaggle_df = pd.read_csv('intermediate_data/kaggle.csv', sep=';')\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "0f9b2a3d",
+   "metadata": {},
+   "source": [
+    "## Cleaning Data"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b0583eb5",
+   "execution_count": 195,
+   "id": "07ace32b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "def clean_col_monthly_listeners(input_df):\n",
+    "    data_df = input_df.copy()\n",
+    "\n",
+    "    data_df = data_df[data_df['monthly_listeners'] != '']\n",
+    "    data_df = data_df[data_df['monthly_listeners'].isnull()==False]\n",
+    "\n",
+    "    listeners_series = data_df['monthly_listeners']\n",
+    "    numbers_str_series = listeners_series.str.split(' ').str[0]\n",
+    "    numbers_int_series = numbers_str_series.str.replace(',', '').astype(int)\n",
+    "    data_df['monthly_listeners'] = numbers_int_series\n",
+    "\n",
+    "    return data_df\n",
+    "\n",
+    "def clean_artists_data(input):\n",
+    "\n",
+    "    if (type(input)==pd.DataFrame):\n",
+    "\n",
+    "        data_df = input.copy()\n",
+    "\n",
+    "        # Get columns\n",
+    "        cols_input = list(data_df)\n",
+    "        cols_required = [\n",
+    "            'artist', 'id', 'monthly_listeners', 'description',\n",
+    "            'followers', 'genres', 'years_active', 'origin'\n",
+    "        ]\n",
+    "\n",
+    "        # Sort columns\n",
+    "        cols_input.sort()\n",
+    "        cols_required.sort()\n",
+    "\n",
+    "        # Check input length and columns\n",
+    "        if (len(data_df)!=0 and cols_input==cols_required):\n",
+    "\n",
+    "            data_df = clean_col_monthly_listeners(data_df)\n",
+    "            return data_df\n",
+    "\n",
+    "    return None\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "id": "40967556",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> artists_df:\t\t 1284\n",
+      "> cleaned artists_df:\t 1284\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>artist</th>\n",
+       "      <th>id</th>\n",
+       "      <th>monthly_listeners</th>\n",
+       "      <th>description</th>\n",
+       "      <th>followers</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>years_active</th>\n",
+       "      <th>origin</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>a</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5758128</td>\n",
+       "      <td>Some description...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>b</td>\n",
+       "      <td>2</td>\n",
+       "      <td>758128</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>c</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8128</td>\n",
+       "      <td>None</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>d</td>\n",
+       "      <td>4</td>\n",
+       "      <td>128</td>\n",
+       "      <td>\\nThis description has some \\tescape character...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>e</td>\n",
+       "      <td>5</td>\n",
+       "      <td>123</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  artist id  monthly_listeners  \\\n",
+       "0      a  1            5758128   \n",
+       "1      b  2             758128   \n",
+       "2      c  3               8128   \n",
+       "3      d  4                128   \n",
+       "4      e  5                123   \n",
+       "\n",
+       "                                         description followers genres  \\\n",
+       "0                                Some description...                    \n",
+       "1                                                                       \n",
+       "2                                               None                    \n",
+       "3  \\nThis description has some \\tescape character...                    \n",
+       "4                                                                       \n",
+       "\n",
+       "  years_active origin  \n",
+       "0                      \n",
+       "1                      \n",
+       "2                      \n",
+       "3                      \n",
+       "4                      "
+      ]
+     },
+     "execution_count": 200,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "mock_df = pd.DataFrame.from_dict(\n",
+    "    {\n",
+    "        'artist':           ['a', 'b', 'c', 'd', 'e', 'f', 'g'],\n",
+    "        'id':               ['1', '2', '3', '4', '5', '6', '7'],\n",
+    "        'monthly_listeners':['5,758,128 monthly listeners', '758,128 monthly listeners', '8,128 monthly listeners', '128 monthly listeners', '123', '', None],\n",
+    "        'description':      ['Some description...', '', None, '\\nThis description has some \\tescape characters\\n\\n.', '', '', ''],\n",
+    "        'followers':        ['', '', '', '', '', '', ''],\n",
+    "        'genres':           ['', '', '', '', '', '', ''],\n",
+    "        'years_active':     ['', '', '', '', '', '', ''],\n",
+    "        'origin':           ['', '', '', '', '', '', ''],\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "\n",
+    "print('> artists_df:\\t\\t', len(artists_df))\n",
+    "print('> cleaned artists_df:\\t', len(clean_artists_data(artists_df)))\n",
+    "\n",
+    "clean_artists_data(mock_df).head()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "3fef2e2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "test_1_call (__main__.cleanArtistsDataTests) ... ok\n",
+      "test_2_none (__main__.cleanArtistsDataTests) ... ok\n",
+      "test_3_empty (__main__.cleanArtistsDataTests) ... ok\n",
+      "test_4_wrong_cols (__main__.cleanArtistsDataTests) ... ok\n",
+      "test_5_column_order (__main__.cleanArtistsDataTests) ... ok\n",
+      "test_5_run (__main__.cleanArtistsDataTests) ... "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<< you made it to the code >>\n",
+      "<< you made it to the code >>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ok\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 6 tests in 0.005s\n",
+      "\n",
+      "OK\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.main.TestProgram at 0x1223ccac0>"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "class cleanArtistsDataTests(unittest.TestCase):\n",
+    "\n",
+    "    def test_1_call(self):\n",
+    "        self.assertIsNotNone(clean_artists_data)\n",
+    "\n",
+    "    def test_2_none(self):\n",
+    "        self.assertIsNone(clean_artists_data(None))\n",
+    "    \n",
+    "    def test_3_empty(self):\n",
+    "        empty_df = pd.DataFrame.from_dict({})\n",
+    "        self.assertIsNone(clean_artists_data(empty_df))\n",
+    "\n",
+    "    def test_4_wrong_cols(self):\n",
+    "        missing_cols_df = pd.DataFrame.from_dict(\n",
+    "            mock_df.drop(columns=['artist'])\n",
+    "        )\n",
+    "        self.assertIsNone(clean_artists_data(missing_cols_df))\n",
+    "\n",
+    "    def test_5_column_order(self):\n",
+    "        cols = list(mock_df)\n",
+    "        cols += [cols[0]]\n",
+    "        del cols[0]\n",
+    "        wrong_order_df = pd.DataFrame.from_dict(mock_df[cols])\n",
+    "        self.assertIsNotNone(clean_artists_data(wrong_order_df))\n",
+    "\n",
+    "    def test_5_run(self):\n",
+    "        results_df = clean_artists_data(mock_df)\n",
+    "        self.assertIsNotNone(results_df)\n",
+    "\n",
+    "unittest.main(argv=[''], exit=False,verbosity=2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b0583eb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>artist</th>\n",
+       "      <th>id</th>\n",
+       "      <th>monthly_listeners</th>\n",
+       "      <th>description</th>\n",
+       "      <th>followers</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>years_active</th>\n",
+       "      <th>origin</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Rob Zombie</td>\n",
+       "      <td>3HVdAiMNjYrQIKlOGxoGh5</td>\n",
+       "      <td>5,758,128 monthly listeners</td>\n",
+       "      <td>The longtime frontman for '90s industrial supe...</td>\n",
+       "      <td>2645445</td>\n",
+       "      <td>['alternative metal', 'hard rock', 'industrial...</td>\n",
+       "      <td>1985–present</td>\n",
+       "      <td>Robert Bartleh Cummings (1965-01-12) January 1...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Marilyn Manson</td>\n",
+       "      <td>2VYQTNDsvvKN9wmU5W7xpj</td>\n",
+       "      <td>6,735,459 monthly listeners</td>\n",
+       "      <td>Controversial rock frontman Marilyn Manson bec...</td>\n",
+       "      <td>4076257</td>\n",
+       "      <td>['alternative metal', 'hard rock', 'industrial...</td>\n",
+       "      <td>1989–present</td>\n",
+       "      <td>(1969-01-05) January 5, 1969 (age 54)Canton, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Fear Factory</td>\n",
+       "      <td>74Hj7BmnUXyx2udrIEIKwX</td>\n",
+       "      <td>974,109 monthly listeners</td>\n",
+       "      <td>One can’t overstate the size of the Fear Facto...</td>\n",
+       "      <td>632576</td>\n",
+       "      <td>['alternative metal', 'groove metal', 'industr...</td>\n",
+       "      <td>\\n1989–2006\\n2009–present\\n</td>\n",
+       "      <td>Los Angeles, California, U.S.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Rammstein</td>\n",
+       "      <td>6wWVKhxIU2cEi0K81v7HvP</td>\n",
+       "      <td>10,661,005 monthly listeners</td>\n",
+       "      <td>Rammstein are one of rock’s most individual an...</td>\n",
+       "      <td>8618111</td>\n",
+       "      <td>['german metal', 'industrial', 'industrial met...</td>\n",
+       "      <td>1994–present</td>\n",
+       "      <td>Berlin, Germany</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Dope</td>\n",
+       "      <td>7fWgqc4HJi3pcHhK8hKg2p</td>\n",
+       "      <td>1,734,951 monthly listeners</td>\n",
+       "      <td>New album 'Blood Money Part Zer0' out 2.24.23!</td>\n",
+       "      <td>751681</td>\n",
+       "      <td>['alternative metal', 'industrial metal', 'nu ...</td>\n",
+       "      <td>1997–present</td>\n",
+       "      <td>New York City, U.S.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           artist                      id             monthly_listeners  \\\n",
+       "0      Rob Zombie  3HVdAiMNjYrQIKlOGxoGh5   5,758,128 monthly listeners   \n",
+       "1  Marilyn Manson  2VYQTNDsvvKN9wmU5W7xpj   6,735,459 monthly listeners   \n",
+       "2    Fear Factory  74Hj7BmnUXyx2udrIEIKwX     974,109 monthly listeners   \n",
+       "3       Rammstein  6wWVKhxIU2cEi0K81v7HvP  10,661,005 monthly listeners   \n",
+       "4            Dope  7fWgqc4HJi3pcHhK8hKg2p   1,734,951 monthly listeners   \n",
+       "\n",
+       "                                         description  followers  \\\n",
+       "0  The longtime frontman for '90s industrial supe...    2645445   \n",
+       "1  Controversial rock frontman Marilyn Manson bec...    4076257   \n",
+       "2  One can’t overstate the size of the Fear Facto...     632576   \n",
+       "3  Rammstein are one of rock’s most individual an...    8618111   \n",
+       "4     New album 'Blood Money Part Zer0' out 2.24.23!     751681   \n",
+       "\n",
+       "                                              genres  \\\n",
+       "0  ['alternative metal', 'hard rock', 'industrial...   \n",
+       "1  ['alternative metal', 'hard rock', 'industrial...   \n",
+       "2  ['alternative metal', 'groove metal', 'industr...   \n",
+       "3  ['german metal', 'industrial', 'industrial met...   \n",
+       "4  ['alternative metal', 'industrial metal', 'nu ...   \n",
+       "\n",
+       "                  years_active  \\\n",
+       "0                 1985–present   \n",
+       "1                 1989–present   \n",
+       "2  \\n1989–2006\\n2009–present\\n   \n",
+       "3                 1994–present   \n",
+       "4                 1997–present   \n",
+       "\n",
+       "                                              origin  \n",
+       "0  Robert Bartleh Cummings (1965-01-12) January 1...  \n",
+       "1   (1969-01-05) January 5, 1969 (age 54)Canton, ...  \n",
+       "2                      Los Angeles, California, U.S.  \n",
+       "3                                    Berlin, Germany  \n",
+       "4                                New York City, U.S.  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "artists_df.head()\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -2790,7 +3232,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2804,7 +3246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
