completed monthly_listeners column + added some temp debug output to track the testing

--- a/CW2.ipynb
+++ b/CW2.ipynb
@@ -2771,7 +2771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 225,
    "id": "07ace32b",
    "metadata": {},
    "outputs": [],
@@ -2780,13 +2780,23 @@
     "def clean_col_monthly_listeners(input_df):\n",
     "    data_df = input_df.copy()\n",
     "\n",
-    "    data_df = data_df[data_df['monthly_listeners'] != '']\n",
-    "    data_df = data_df[data_df['monthly_listeners'].isnull()==False]\n",
-    "\n",
+    "    # Select monthly listeners col\n",
     "    listeners_series = data_df['monthly_listeners']\n",
+    "\n",
+    "    # Split the string and replace comma\n",
     "    numbers_str_series = listeners_series.str.split(' ').str[0]\n",
-    "    numbers_int_series = numbers_str_series.str.replace(',', '').astype(int)\n",
+    "    numbers_int_series = numbers_str_series.str.replace(',', '')\n",
+    "\n",
+    "    # Convert to numeric\n",
+    "    numbers_int_series = pd.to_numeric(numbers_int_series, errors='coerce')\n",
     "    data_df['monthly_listeners'] = numbers_int_series\n",
+    "\n",
+    "    # Drop rows with erroneous monthly listeners\n",
+    "    data_df = data_df[data_df['monthly_listeners'].isnull()==False]\n",
+    "    data_df = data_df[data_df['monthly_listeners']>=0]\n",
+    "\n",
+    "    # Convert from numeric to integer (numeric cols can have inf value)\n",
+    "    data_df['monthly_listeners'] = data_df['monthly_listeners'].astype(int)\n",
     "\n",
     "    return data_df\n",
     "\n",
@@ -2819,7 +2829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 226,
    "id": "40967556",
    "metadata": {},
    "outputs": [
@@ -2945,7 +2955,7 @@
        "4                      "
       ]
      },
-     "execution_count": 200,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2954,14 +2964,14 @@
     "\n",
     "mock_df = pd.DataFrame.from_dict(\n",
     "    {\n",
-    "        'artist':           ['a', 'b', 'c', 'd', 'e', 'f', 'g'],\n",
-    "        'id':               ['1', '2', '3', '4', '5', '6', '7'],\n",
-    "        'monthly_listeners':['5,758,128 monthly listeners', '758,128 monthly listeners', '8,128 monthly listeners', '128 monthly listeners', '123', '', None],\n",
-    "        'description':      ['Some description...', '', None, '\\nThis description has some \\tescape characters\\n\\n.', '', '', ''],\n",
-    "        'followers':        ['', '', '', '', '', '', ''],\n",
-    "        'genres':           ['', '', '', '', '', '', ''],\n",
-    "        'years_active':     ['', '', '', '', '', '', ''],\n",
-    "        'origin':           ['', '', '', '', '', '', ''],\n",
+    "        'artist':           ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i'],\n",
+    "        'id':               ['1', '2', '3', '4', '5', '6', '7', '8', '9'],\n",
+    "        'monthly_listeners':['5,758,128 monthly listeners', '758,128 monthly listeners', '8,128 monthly listeners', '128 monthly listeners', '123', '', None, '-1', 'asd'],\n",
+    "        'description':      ['Some description...', '', None, '\\nThis description has some \\tescape characters\\n\\n.', '', '', '', '', ''],\n",
+    "        'followers':        ['', '', '', '', '', '', '', '', ''],\n",
+    "        'genres':           ['', '', '', '', '', '', '', '', ''],\n",
+    "        'years_active':     ['', '', '', '', '', '', '', '', ''],\n",
+    "        'origin':           ['', '', '', '', '', '', '', '', ''],\n",
     "    }\n",
     ")\n",
     "\n",
@@ -2969,7 +2979,7 @@
     "print('> artists_df:\\t\\t', len(artists_df))\n",
     "print('> cleaned artists_df:\\t', len(clean_artists_data(artists_df)))\n",
     "\n",
-    "clean_artists_data(mock_df).head()\n",
+    "clean_artists_data(mock_df).head(20)\n",
     "\n"
    ]
   },
