cleaned notebook outputs

--- a/CW2.ipynb
+++ b/CW2.ipynb
@@ -5757,41 +5757,41 @@
     "# 'Pop Hits 2023': '5TDtuKDbOhrfW7C58XnriZ',\n",
     "# 'Pop Mix': '37i9dQZF1EQncLwOalG3K7'\n",
     "\n",
-    "allowed_genres = [\n",
-    "    'industrial metal',\n",
-    "    'alternative metal',\n",
-    "    'glam metal',\n",
-    "    'death metal',\n",
-    "    'hard rock',\n",
-    "    'rock',\n",
-    "    'metalcore',\n",
-    "    'deathcore',\n",
-    "    'melodic metalcore',\n",
-    "    'melodic death metal',\n",
-    "    'grindcore',\n",
-    "    'power metal',\n",
-    "    'black metal',\n",
-    "    'nu metal',\n",
-    "    'gothic metal',\n",
-    "    'gothic symphonic metal',\n",
-    "    'groove metal',\n",
-    "    'pop',\n",
-    "    'pop rock',\n",
-    "    'dance pop',\n",
-    "]\n",
+    "# allowed_genres = [\n",
+    "#     'industrial metal',\n",
+    "#     'alternative metal',\n",
+    "#     'glam metal',\n",
+    "#     'death metal',\n",
+    "#     'hard rock',\n",
+    "#     'rock',\n",
+    "#     'metalcore',\n",
+    "#     'deathcore',\n",
+    "#     'melodic metalcore',\n",
+    "#     'melodic death metal',\n",
+    "#     'grindcore',\n",
+    "#     'power metal',\n",
+    "#     'black metal',\n",
+    "#     'nu metal',\n",
+    "#     'gothic metal',\n",
+    "#     'gothic symphonic metal',\n",
+    "#     'groove metal',\n",
+    "#     'pop',\n",
+    "#     'pop rock',\n",
+    "#     'dance pop',\n",
+    "# ]\n",
     "\n",
-    "all_genres_dict = {}\n",
+    "# all_genres_dict = {}\n",
     "\n",
-    "genres_series = artists_cleaned_df['genres'].values.tolist()\n",
-    "for genre_list in genres_series:\n",
-    "    for genre in genre_list:\n",
-    "        if (genre not in all_genres_dict):\n",
-    "            all_genres_dict[genre] = 1\n",
-    "        else:\n",
-    "            all_genres_dict[genre] += 1\n",
+    "# genres_series = artists_cleaned_df['genres'].values.tolist()\n",
+    "# for genre_list in genres_series:\n",
+    "#     for genre in genre_list:\n",
+    "#         if (genre not in all_genres_dict):\n",
+    "#             all_genres_dict[genre] = 1\n",
+    "#         else:\n",
+    "#             all_genres_dict[genre] += 1\n",
     "\n",
-    "for genre in all_genres_dict:\n",
-    "    print(genre, all_genres_dict[genre])\n",
+    "# for genre in all_genres_dict:\n",
+    "#     print(genre, all_genres_dict[genre])\n",
     "\n"
    ]
   },
