Added function to filter out tracks with non-english lyrics

--- a/CW2.ipynb
+++ b/CW2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 85,
    "id": "b8ce7b1b",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,8 @@
     "import unittest\n",
     "import demoji\n",
     "import numpy as np\n",
-    "import pycountry\n"
+    "import pycountry\n",
+    "from ftlangdetect import detect\n"
    ]
   },
   {
@@ -4835,11 +4836,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "id": "b3dc6bbf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# pip install fasttext-langdetect\n",
+    "\n",
+    "def get_lyrics_language(lyrics):\n",
+    "    lang_predict = detect(text=lyrics, low_memory=False)\n",
+    "\n",
+    "    lang = lang_predict['lang']\n",
+    "    conf = lang_predict['score']\n",
+    "\n",
+    "    if (lang=='en' and conf>=0.8):\n",
+    "        return 'english'\n",
+    "    else:\n",
+    "        return 'non-english'\n",
+    "\n",
+    "spotify_lang_df = spotify_cleaned_df.copy()\n",
+    "spotify_lang_df['language'] = spotify_lang_df['lyrics'].apply(lambda row: get_lyrics_language(row))\n",
+    "\n",
+    "kaggle_lang_df = kaggle_cleaned_df.copy()\n",
+    "kaggle_lang_df['language'] = kaggle_lang_df['lyrics'].apply(lambda row: get_lyrics_language(row))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "0e4e1724",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>track</th>\n",
+       "      <th>lyrics</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6053</th>\n",
+       "      <td>Mera Na</td>\n",
+       "      <td>Hah, Sidhu Moose Wala. (Steel Banglez). Mera n...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6059</th>\n",
+       "      <td>White Brown Black</td>\n",
+       "      <td>Karan Aujla!. Avvy!. You Already Know Baby!. H...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6060</th>\n",
+       "      <td>Players</td>\n",
+       "      <td>Rusi nu cahiye koi gehna sohneya ehna ta karna...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6081</th>\n",
+       "      <td>With You</td>\n",
+       "      <td>Teriyan adavaan. Teriyan adavaan munda maar su...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6082</th>\n",
+       "      <td>True Stories</td>\n",
+       "      <td>(Brr). Gal to pair'ri ae Christian Dior. Tu se...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6084</th>\n",
+       "      <td>Summer High</td>\n",
+       "      <td>Ik sadde milan diya khabra. Pyaar ch bhijan di...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6085</th>\n",
+       "      <td>TERE TE</td>\n",
+       "      <td>Tu Bahli Jachdi. Tere Bina Aukha Kattan. Pal B...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6086</th>\n",
+       "      <td>Shinunoga E-Wa</td>\n",
+       "      <td>. 指切りげんまん ホラでも吹いたら. 針でもなんでも 飲ませていただき Monday. I...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6087</th>\n",
+       "      <td>Garden</td>\n",
+       "      <td>. Hmm, hmm, hmm, ああ. 鳥は春を告げて. 私は恋をして. 素敵な温度だけ....</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6088</th>\n",
+       "      <td>きらり</td>\n",
+       "      <td>Are kuruu kisetsu no naka wo. Futari wa hitori...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  track                                             lyrics\n",
+       "6053            Mera Na  Hah, Sidhu Moose Wala. (Steel Banglez). Mera n...\n",
+       "6059  White Brown Black  Karan Aujla!. Avvy!. You Already Know Baby!. H...\n",
+       "6060            Players  Rusi nu cahiye koi gehna sohneya ehna ta karna...\n",
+       "6081           With You  Teriyan adavaan. Teriyan adavaan munda maar su...\n",
+       "6082       True Stories  (Brr). Gal to pair'ri ae Christian Dior. Tu se...\n",
+       "6084        Summer High  Ik sadde milan diya khabra. Pyaar ch bhijan di...\n",
+       "6085            TERE TE  Tu Bahli Jachdi. Tere Bina Aukha Kattan. Pal B...\n",
+       "6086     Shinunoga E-Wa  . 指切りげんまん ホラでも吹いたら. 針でもなんでも 飲ませていただき Monday. I...\n",
+       "6087             Garden  . Hmm, hmm, hmm, ああ. 鳥は春を告げて. 私は恋をして. 素敵な温度だけ....\n",
+       "6088                きらり  Are kuruu kisetsu no naka wo. Futari wa hitori..."
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "# Print some tracks with non-english lyrics\n",
+    "spotify_lang_df[spotify_lang_df['language']=='non-english'][['track', 'lyrics']].tail(10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "9cce6944",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Spotify DataFrame\n",
+      "\t- original cleaned:    4101 tracks\n",
+      "\t- only english lyrics: 3695 tracks\n",
+      "Kaggle DataFrame\n",
+      "\t- original cleaned:    1753 tracks\n",
+      "\t- only english lyrics: 1460 tracks\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Select only tracks with english lyrics\n",
+    "spotify_filtered_df = spotify_lang_df[spotify_lang_df['language']=='english']\n",
+    "kaggle_filtered_df = kaggle_lang_df[kaggle_lang_df['language']=='english']\n",
+    "\n",
+    "# Print change in number of Spotify dataframe tracks\n",
+    "print('Spotify DataFrame')\n",
+    "print('\\t- original cleaned:   ', len(spotify_lang_df), 'tracks')\n",
+    "print('\\t- only english lyrics:', len(spotify_filtered_df), 'tracks')\n",
+    "\n",
+    "# Print change in number of Kaggle dataframe tracks\n",
+    "print('Kaggle DataFrame')\n",
+    "print('\\t- original cleaned:   ', len(kaggle_lang_df), 'tracks')\n",
+    "print('\\t- only english lyrics:', len(kaggle_filtered_df), 'tracks')\n"
+   ]
   },
   {
    "cell_type": "markdown",
