added spotify-kaggle dataset append, null checks and duplicate checks

--- a/CW2.ipynb
+++ b/CW2.ipynb
@@ -4975,7 +4975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 142,
    "id": "9cce6944",
    "metadata": {},
    "outputs": [
@@ -5010,6 +5010,115 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "4916199b",
+   "metadata": {},
+   "source": [
+    "## Append Spotify and Kaggle dataframes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "id": "c69eaf48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "cols = list(spotify_filtered_df)\n",
+    "spotify_joined_df = pd.concat([spotify_filtered_df[cols], kaggle_filtered_df[cols]])\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "aa9ce21c",
+   "metadata": {},
+   "source": [
+    "## Basic checks - Duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "524fa292",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Duplicates count:\n",
+      "\t- artists dataframe: 0\n",
+      "\t- spotify tracks dataframe: 0\n",
+      "\t- kaggle tracks dataframe: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Drop duplicates\n",
+    "artists_filtered_df = artists_filtered_df.drop_duplicates(subset='id')\n",
+    "spotify_joined_df = spotify_joined_df.drop_duplicates(subset='track_id')\n",
+    "kaggle_filtered_df = kaggle_filtered_df.drop_duplicates(subset='track_id')\n",
+    "\n",
+    "# Calculate artist dataframe duplicates\n",
+    "artist_cols = [\n",
+    "        'artist', 'id', 'monthly_listeners', 'description',\n",
+    "        'followers', 'origin', 'active_start', 'active_end'\n",
+    "    ]\n",
+    "artist_duplicates = len(artists_filtered_df[artist_cols]) - len(artists_filtered_df[artist_cols].drop_duplicates(subset='id'))\n",
+    "\n",
+    "# Calculate Spotify and kaggle dataframe duplicates\n",
+    "spotify_duplicates = len(spotify_joined_df) - len(spotify_joined_df.drop_duplicates(subset='track_id'))\n",
+    "kaggle_duplicates = len(kaggle_filtered_df) - len(kaggle_filtered_df.drop_duplicates('track_id'))\n",
+    "\n",
+    "print('Duplicates count:')\n",
+    "print('\\t- artists dataframe:', artist_duplicates)\n",
+    "print('\\t- spotify tracks dataframe:', spotify_duplicates)\n",
+    "print('\\t- kaggle tracks dataframe:', kaggle_duplicates)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "abfbd889",
+   "metadata": {},
+   "source": [
+    "## Basic checks - Nulls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "id": "a2d64b7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Null count:\n",
+      "\t- artists dataframe:\t\t 0\n",
+      "\t- all tracks dataframe:\t\t 0\n",
+      "\t- kaggle tracks dataframe:\t 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "artists_df = artists_filtered_df.dropna()\n",
+    "tracks_all_df = spotify_joined_df.dropna()\n",
+    "tracks_kaggle_df = kaggle_filtered_df.dropna()\n",
+    "\n",
+    "print('Null count:')\n",
+    "print('\\t- artists dataframe:\\t\\t', len(artists_filtered_df)-len(artists_df))\n",
+    "print('\\t- all tracks dataframe:\\t\\t', len(spotify_joined_df)-len(tracks_all_df))\n",
+    "print('\\t- kaggle tracks dataframe:\\t', len(kaggle_filtered_df)-len(tracks_kaggle_df))\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4a729aa5",
    "metadata": {},
@@ -5021,6 +5130,25 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5d8a5e49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fb6cfec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa3b4d8a",
    "metadata": {},
    "outputs": [],
    "source": []
